# malcrypt

./: .gitignore  Cargo.toml  README.md  build.rs
src/: crypt.rs  main.rs  mal.rs  resources.rs
