[package]
name = "malcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
rand = "0.8.5"
rc4 = "0.1.0"
rsa = "0.9.6"
walkdir = "2.5.0"

[build-dependencies]
rsa = "0.9.6"
rand = "0.8.5"
